fix z-index issues

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -826,6 +826,7 @@ a:hover {
   height: 550px;
   border-radius: 15px;
   overflow-y: scroll;
+  z-index: 2;
 
   @media (max-width: 550px) {
     width: 380px;
